[gd_scene load_steps=20 format=3 uid="uid://dwpme4mkm38s"]

[ext_resource type="Script" uid="uid://hw1q74l5g8rl" path="res://scripts/ranks.gd" id="1_0n8cl"]
[ext_resource type="Texture2D" uid="uid://boekd1r0welgk" path="res://assets/backgrounds/start_background.png" id="2_x5s2u"]
[ext_resource type="Texture2D" uid="uid://c80wyehcmbnsx" path="res://assets/tilemaps/Square Buttons 26x26.png" id="3_xw801"]
[ext_resource type="Texture2D" uid="uid://cjhrdrsu3etor" path="res://assets/tilemaps/Square Buttons 26x19.png" id="4_6cw8h"]
[ext_resource type="FontFile" uid="uid://ld407tfxyrmy" path="res://fonts/bjg-pixel-brandon-james-greer.otf" id="5_2nnvn"]
[ext_resource type="Texture2D" uid="uid://bmxrwub3ywiuo" path="res://assets/grupos/grupo1vs.png" id="6_a5nfn"]
[ext_resource type="Texture2D" uid="uid://gy38s8psucbu" path="res://assets/grupos/grupo2vs.png" id="7_i1pdo"]
[ext_resource type="Texture2D" uid="uid://b7ttqkxcw6jly" path="res://assets/grupos/grupo3vs.png" id="8_psuyh"]
[ext_resource type="Texture2D" uid="uid://dgdxbcaauvaba" path="res://assets/grupos/grupo4vs.png" id="9_gkg5k"]
[ext_resource type="Texture2D" uid="uid://bk6f80uboly6y" path="res://assets/grupos/grupo5vs.png" id="10_afvlu"]
[ext_resource type="Texture2D" uid="uid://43v3dr3q6625" path="res://assets/grupos/grupo6vs.png" id="11_d8doj"]
[ext_resource type="Texture2D" uid="uid://u8ruqjy6yy3t" path="res://assets/grupos/1lugar.png" id="12_cqtri"]
[ext_resource type="Texture2D" uid="uid://bfipcgpqf3pmv" path="res://assets/grupos/2lugar.png" id="13_m177j"]
[ext_resource type="Texture2D" uid="uid://c2t52w2c4ge5w" path="res://assets/grupos/3lugar.png" id="14_tq2gr"]
[ext_resource type="Script" uid="uid://bkg4s7mpkvlh6" path="res://scripts/game_manager.gd" id="15_27b8f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j517y"]
texture = ExtResource("2_x5s2u")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0jnj1"]
texture = ExtResource("3_xw801")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j517y"]
texture = ExtResource("4_6cw8h")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0

[sub_resource type="TileSet" id="TileSet_ty12v"]
sources/0 = SubResource("TileSetAtlasSource_0jnj1")
sources/2 = SubResource("TileSetAtlasSource_j517y")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0n8cl")

[node name="Panel" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -144.0
offset_right = 256.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_j517y")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_ty12v")
format = 2
layer_0/tile_data = PackedInt32Array(-262147, 65536, 1, -196611, 65536, 1, -131075, 65536, 1, -65539, 65536, 1, -3, 65536, 1, 65533, 65536, 1, 131069, 65536, 1, 196605, 65536, 1, 262141, 65536, 1, 327677, 65536, 1, -262146, 65536, 1, -196610, 65536, 1, -131074, 65536, 1, -65538, 65536, 1, -2, 65536, 1, 65534, 65536, 1, 131070, 65536, 1, 196606, 65536, 1, 262142, 65536, 1, 327678, 65536, 1, -262145, 65536, 1, -196609, 65536, 1, -131073, 65536, 1, -65537, 65536, 1, -1, 65536, 1, 65535, 65536, 1, 131071, 65536, 1, 196607, 65536, 1, 262143, 65536, 1, 327679, 65536, 1, -327680, 65536, 1, -262144, 65536, 1, -196608, 65536, 1, -131072, 65536, 1, -65536, 65536, 1, 0, 65536, 1, 65536, 65536, 1, 131072, 65536, 1, 196608, 65536, 1, 262144, 65536, 1, -327679, 65536, 1, -262143, 65536, 1, -196607, 65536, 1, -131071, 65536, 1, -65535, 65536, 1, 1, 65536, 1, 65537, 65536, 1, 131073, 65536, 1, 196609, 65536, 1, 262145, 65536, 1, -327678, 65536, 1, -262142, 65536, 1, -196606, 65536, 1, -131070, 65536, 1, -65534, 65536, 1, 2, 65536, 1, 65538, 65536, 1, 131074, 65536, 1, 196610, 65536, 1, 262146, 65536, 1, -327683, 65536, 0, -327682, 65536, 0, -327681, 65536, 0, -393216, 65536, 0, -393215, 65536, 0, -393214, 65536, 0, 393213, 65536, 2, 393214, 65536, 2, 393215, 65536, 2, 327680, 65536, 2, 327681, 65536, 2, 327682, 65536, 2, 393212, 0, 2, -262148, 0, 1, -196612, 0, 1, -131076, 0, 1, -65540, 0, 1, -4, 0, 1, 65532, 0, 1, 131068, 0, 1, 196604, 0, 1, 262140, 0, 1, 327676, 0, 1, -327684, 0, 0, -393213, 131072, 0, -327677, 131072, 1, -262141, 131072, 1, -196605, 131072, 1, -131069, 131072, 1, -65533, 131072, 1, 3, 131072, 1, 65539, 131072, 1, 131075, 131072, 1, 196611, 131072, 1, 262147, 131072, 1, 327683, 131072, 2, -11, 2, 0, 65525, 0, 1, 131061, 0, 1, -10, 65538, 0, 65526, 65536, 1, 131062, 65536, 1, -9, 65538, 0, 65527, 65536, 1, 131063, 65536, 1, -8, 65538, 0, 65528, 65536, 1, 131064, 65536, 1, -7, 65538, 0, 65529, 65536, 1, 131065, 65536, 1, -6, 131074, 0, 65530, 131072, 1, 131066, 131072, 1, 196597, 2, 1, 196598, 65538, 1, 196599, 65538, 1, 196600, 65538, 1, 196601, 65538, 1, 196602, 131074, 1, -65531, 2, 0, 5, 0, 1, 65541, 0, 1, -65530, 65538, 0, 6, 65536, 1, 65542, 65536, 1, -65529, 65538, 0, 7, 65536, 1, 65543, 65536, 1, -65528, 65538, 0, 8, 65536, 1, 65544, 65536, 1, -65527, 65538, 0, 9, 65536, 1, 65545, 65536, 1, -65526, 131074, 0, 10, 131072, 1, 65546, 131072, 1, 131077, 2, 1, 131078, 65538, 1, 131079, 65538, 1, 131080, 65538, 1, 131081, 65538, 1, 131082, 131074, 1, -131083, 0, 1, -65547, 2, 1, -131082, 65536, 1, -65546, 65538, 1, -131081, 65536, 1, -65545, 65538, 1, -131080, 65536, 1, -65544, 65538, 1, -131079, 65536, 1, -65543, 65538, 1, -131078, 131072, 1, -65542, 131074, 1, -196618, 65536, 0, -196617, 65536, 0, -196616, 65536, 0, -196615, 65536, 0, -196614, 131072, 0, -196619, 0, 0, -262139, 0, 0, -196603, 0, 1, -131067, 2, 1, -262138, 65536, 0, -196602, 65536, 1, -131066, 65538, 1, -262137, 65536, 0, -196601, 65536, 1, -131065, 65538, 1, -262136, 65536, 0, -196600, 65536, 1, -131064, 65538, 1, -262135, 65536, 0, -196599, 65536, 1, -131063, 65538, 1, -262134, 131072, 0, -196598, 131072, 1, -131062, 131074, 1)

[node name="Label" type="Label" parent="TileMap"]
texture_filter = 1
offset_left = -148.0
offset_top = -47.0
offset_right = -106.0
offset_bottom = -31.0
theme_override_colors/font_color = Color(0.341176, 0.368627, 0.360784, 1)
theme_override_fonts/font = ExtResource("5_2nnvn")
theme_override_font_sizes/font_size = 8
text = "Tema"

[node name="Label4" type="Label" parent="TileMap"]
texture_filter = 1
offset_left = -148.0
offset_top = 6.0
offset_right = -106.0
offset_bottom = 22.0
theme_override_colors/font_color = Color(0.341176, 0.368627, 0.360784, 1)
theme_override_fonts/font = ExtResource("5_2nnvn")
theme_override_font_sizes/font_size = 8
text = "Wifi"

[node name="Label2" type="Label" parent="TileMap"]
texture_filter = 1
offset_left = 98.0
offset_top = -47.0
offset_right = 160.0
offset_bottom = -31.0
theme_override_colors/font_color = Color(0.341176, 0.368627, 0.360784, 1)
theme_override_fonts/font = ExtResource("5_2nnvn")
theme_override_font_sizes/font_size = 8
text = "numero"

[node name="Label3" type="Label" parent="TileMap"]
texture_filter = 1
offset_left = 106.0
offset_top = -3.0
offset_right = 156.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0.341176, 0.368627, 0.360784, 1)
theme_override_fonts/font = ExtResource("5_2nnvn")
theme_override_font_sizes/font_size = 20
text = "01"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -20.0
offset_right = 22.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="T1" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("6_a5nfn")

[node name="T2" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("7_i1pdo")

[node name="T3" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("8_psuyh")

[node name="T4" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("9_gkg5k")

[node name="T5" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("10_afvlu")

[node name="T6" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("11_d8doj")

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("12_cqtri")

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("13_m177j")

[node name="TextureButton3" type="TextureButton" parent="HBoxContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("14_tq2gr")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("15_27b8f")
